fix: fixed VerticalSectionOverflow (#92)

--- a/src/components/VerticalNavigation/styles.scss
+++ b/src/components/VerticalNavigation/styles.scss
@@ -6,7 +6,7 @@
 
 .rainbow-nav-vertical_compact .rainbow-nav-vertical__title,
 .rainbow-nav-vertical_compact .rainbow-nav-vertical__action {
-    padding: 0.25rem 1.5rem;
+    padding: 0.5rem 1.5rem;
 }
 
 .rainbow-nav-vertical_shade .rainbow-nav-vertical__action:hover {
